# VCell-AI

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  docker-compose.yml  litellm.env.example  litellm_config.yaml
.github/workflows/: build_containers.yml  ci.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  populate_db.ipynb  pyproject.toml
backend/app/: __init__.py  backend_err_ascii.txt  main.py
backend/app/controllers/: bmdb_controller.py  knowledge_base_controller.py  llms_controller.py  qdrant_controller.py  users_controller.py  vcelldb_controller.py
backend/app/core/: auth.py  config.py  litellm.py  logger.py  singleton.py
backend/app/routes/: bmdb_router.py  knowledge_base_router.py  llms_router.py  qdrant_router.py  users_router.py  vcelldb_router.py
backend/app/schemas/: __init__.py  bmdb_schema.py  llms_schema.py  qdrant_schema.py  tool_schema.py  users_schema.py  vcelldb_schema.py
backend/app/services/: databases_service.py  knowledge_base.py  knowledge_base_service.py  litellm_service.py  llms_service.py  qdrant_service.py  users_service.py  vcelldb_service.py
backend/app/tests/: test_llms_service.py  test_vcelldb_service.py  tool_calling_tests.py  vcelldb_api_tests.py
backend/app/utils/: __init__.py  bmdb_system_prompt.py  response_formatter.py  system_prompt.py  tool_selection_prompt.py  tools_utils.py  vcdb_system_prompt.py
backend/tests/: test_llms_service.py  test_vcelldb_service.py
docs/: architecture.md  development_branch.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/knowledge-base/: page.tsx
frontend/app/admin/settings/: page.tsx
frontend/app/analyze/: page.tsx
frontend/app/analyze/[id]/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/diagrams/: page.tsx
frontend/app/sbml/: page.tsx
frontend/app/search/: page.tsx
frontend/app/search/[bmid]/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/vcml/: page.tsx
frontend/components/: BnglVisualizerSection.tsx  ChatBox.tsx  DiagramSection.tsx  ToolParameters.tsx  VCMLSection.tsx  app-sidebar.tsx  applications-fetcher.tsx  auth-sync.tsx  file-fetcher.tsx  json-viewer.tsx  login-required-dialog.tsx  markdown-renderer.tsx  onboarding-modal.tsx  xml-viewer.tsx
frontend/lib/: auth0.ts
frontend/public/bnglviz/: bngl-extractor.js  index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: diagrams.tsx
kustomize/: README.md
kustomize/base/: backend.yaml  frontend.yaml  kustomization.yaml  litellm.yaml  litellm_config.yaml  ollama.yaml  qdrant.yaml
kustomize/config/vcell-ai-local/: backend.env  frontend.env  kustomization.yaml  litellm.env
kustomize/config/vcell-ai-rke/: backend.env  frontend.env  kustomization.yaml  litellm.env
kustomize/config/vcell-ai-rke-dev/: backend.env  frontend.env  litellm.env
kustomize/overlays/vcell-ai-local/: ingress.yaml  kustomization.yaml  secrets.dat.template  secrets.sh
kustomize/overlays/vcell-ai-rke/: ingress.yaml  kustomization.yaml  secrets.dat.template  secrets.sh
kustomize/overlays/vcell-ai-rke-dev/: ingress.yaml  kustomization.yaml  secrets.dat.template  secrets.sh
kustomize/scripts/: build_and_push.sh  sealed_secret_backend.sh  sealed_secret_frontend.sh  sealed_secret_ghcr.sh  sealed_secret_litellm.sh
(+3 files in other folders)
