[tool.poetry]
name = "vcell-backend"
version = "0.1.0"
description = ""
authors = ["Kacem Mathlouthi <kacem.mathlouthi@insat.ucar.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pydantic-settings = "^2.9.1"
httpx = "^0.28.1"
black = "^25.1.0"
openai = "^1.84.0"
qdrant-client = "^1.15.0"
langchain = "^0.3.27"
pypdf = "^5.8.0"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.20"
markitdown = {extras = ["all"], version = "^0.1.2"}
notebook = "^7.4.4"
ipykernel = "^6.30.0"
langfuse = "^3.2.4"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
