[project]
name = "vcell-backend"
version = "0.1.0"
description = ""
authors = [{name = "Kacem Mathlouthi", email = "kacem.mathlouthi@insat.ucar.tn"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "pydantic-settings>=2.9.1",
    "httpx>=0.28.1",
    "black>=25.1.0",
    "openai>=1.84.0",
    "qdrant-client>=1.15.0",
    "langchain>=0.3.27",
    "pypdf>=5.8.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "markitdown[all]>=0.1.2",
    "notebook>=7.4.4",
    "ipykernel>=6.30.0",
    "langfuse>=3.2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
