[project]
name = "vcell-backend"
version = "0.1.0"
description = ""
authors = [{name = "Kacem Mathlouthi", email = "kacem.mathlouthi@insat.ucar.tn"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn[standard]>=0.34.3,<0.35.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "openai>=1.84.0,<2.0.0",
    "qdrant-client>=1.15.0,<2.0.0",
    "langchain>=0.3.27,<0.4.0",
    "langfuse>=3.2.4,<4.0.0",
    "pypdf>=5.8.0,<6.0.0",
    "pypdf2>=3.0.1,<4.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "markitdown[all]>=0.1.2,<0.2.0",
    "notebook>=7.4.4,<8.0.0",
    "ipykernel>=6.30.0,<7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "ruff>=0.3.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W503",   # line break before binary operator
    "E203",   # whitespace before ':'
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
multi-line-string-mode = "multi"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
